--- a/package.json
+++ b/package.json
@@ -13,7 +13,29 @@
   "author": "Xiaochuan Ma <mxcins@gmail.com>",
   "scripts": {
     "start": "umi dev",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "umi build",
+    "lint": "yarn lint:style && yarn lint:ts && ts-compile-check",
+    "lint-staged": "lint-staged",
+    "lint-staged:js": "eslint --ext .js",
+    "lint-staged:ts": "tslint --fix \"src/**/*.ts*\"",
+    "lint:style": "stylelint \"src/**/*.less\" --syntax less",
+    "lint:ts": "tslint --fix \"src/**/*.ts*\"",
+    "prettier": "prettier --write \"./src/**/*\" \"./typings/**/*\"",
+    "test": "umi test",
+    "ts-compile-check": "tsc -p tsconfig.json --noEmit"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn ts-compile-check && lint-staged"
+    }
+  },
+  "lint-staged": {
+    "**/*.less": "stylelint --syntax less",
+    "**/*.{js,jsx,ts,tsx,less}": [
+      "prettier --write",
+      "git add"
+    ],
+    "**/*.{ts,tsx}": "npm run lint-staged:ts"
   },
   "dependencies": {
     "@mxcins/lodash": "1.0.0",
@@ -23,6 +45,17 @@
     "umi-plugin-react": "1.7.4"
   },
   "devDependencies": {
-    "@mxcins/types": "1.0.0"
+    "@mxcins/types": "1.0.0",
+    "husky": "1.3.1",
+    "lint-staged": "8.1.5",
+    "prettier": "1.17.0",
+    "stylelint": "10.0.1",
+    "stylelint-config-mxcins": "1.0.0-rc.2",
+    "tslint": "5.16.0",
+    "tslint-config-mxcins": "1.0.0-rc.1",
+    "typescript": "3.4.3"
+  },
+  "resolutions": {
+    "@types/react": "16.8.8"
   }
 }
