--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "start": "umi dev",
     "build": "umi build",
-    "lint": "yarn lint:style && yarn lint:ts && ts-compile-check",
+    "lint": "yarn lint:style && yarn lint:ts && yarn ts-compile-check",
     "lint-staged": "lint-staged",
     "lint-staged:js": "eslint --ext .js",
     "lint-staged:ts": "tslint --fix \"src/**/*.ts*\"",
@@ -49,7 +49,7 @@
     "husky": "1.3.1",
     "lint-staged": "8.1.5",
     "prettier": "1.17.0",
-    "stylelint": "10.0.1",
+    "stylelint": "9.x",
     "stylelint-config-mxcins": "1.0.0-rc.2",
     "tslint": "5.16.0",
     "tslint-config-mxcins": "1.0.0-rc.1",
