--- a/package.json
+++ b/package.json
@@ -39,13 +39,20 @@
   },
   "dependencies": {
     "@mxcins/lodash": "1.0.0",
+    "apollo-cache-inmemory": "1.5.1",
+    "apollo-client": "2.5.1",
+    "apollo-link-http": "1.5.14",
+    "graphql": "14.2.1",
+    "graphql-tag": "2.10.1",
     "react": "16.8.3",
+    "react-apollo": "2.5.4",
     "react-dom": "16.8.3",
     "umi": "2.6.13",
     "umi-plugin-react": "1.7.4"
   },
   "devDependencies": {
-    "@mxcins/types": "1.0.0",
+    "@mxcins/types": "1.0.1",
+    "@types/graphql": "14.2.0",
     "husky": "1.3.1",
     "lint-staged": "8.1.5",
     "prettier": "1.17.0",
