--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "scripts": {
     "start": "umi dev",
     "build": "umi build",
+    "schema:dev": "graphql get-schema dev",
+    "generate-ts": "graphql-schema-typescript generate-ts src/graphql --output=src/graphql/generated.d.ts",
     "lint": "yarn lint:style && yarn lint:ts && yarn ts-compile-check",
     "lint-staged": "lint-staged",
     "lint-staged:js": "eslint --ext .js",
@@ -53,6 +55,7 @@
   "devDependencies": {
     "@mxcins/types": "1.0.1",
     "@types/graphql": "14.2.0",
+    "graphql-schema-typescript": "^1.2.9",
     "husky": "1.3.1",
     "lint-staged": "8.1.5",
     "prettier": "1.17.0",
