--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,3 +1,21 @@
 {
-  "extends": "stylelint-config-mxcins"
+  "extends": "stylelint-config-mxcins",
+  "rules": {
+    "selector-pseudo-class-no-unknown": [
+      true,
+      {
+        "ignorePseudoClasses": [
+          "global"
+        ]
+      }
+    ],
+    "selector-pseudo-element-no-unknown": [
+      true,
+      {
+        "ignorePseudoElements": [
+          "global"
+        ]
+      }
+    ]
+  }
 }
