--- a/package.json
+++ b/package.json
@@ -40,22 +40,28 @@
     "**/*.{ts,tsx}": "npm run lint-staged:ts"
   },
   "dependencies": {
-    "@mxcins/lodash": "1.0.0",
+    "@mxcins/lodash": "1.0.1",
+    "@mxcins/request": "1.3.1",
+    "@mxcins/utils": "1.0.1",
     "apollo-cache-inmemory": "1.5.1",
     "apollo-client": "2.5.1",
     "apollo-link-http": "1.5.14",
     "graphql": "14.2.1",
     "graphql-tag": "2.10.1",
+    "moment-es6": "^1.0.0",
     "react": "16.8.3",
     "react-apollo": "2.5.4",
     "react-dom": "16.8.3",
+    "react-highlight-words": "0.16.0",
     "umi": "2.6.13",
     "umi-plugin-react": "1.7.4"
   },
   "devDependencies": {
     "@mxcins/types": "1.0.1",
     "@types/graphql": "14.2.0",
-    "graphql-schema-typescript": "^1.2.9",
+    "@types/jest": "^24.0.11",
+    "@types/react-highlight-words": "0.16.0",
+    "graphql-schema-typescript": "1.2.9",
     "husky": "1.3.1",
     "lint-staged": "8.1.5",
     "prettier": "1.17.0",
