--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@mxcins/lodash": "1.0.1",
     "@mxcins/request": "1.3.1",
     "@mxcins/utils": "1.0.1",
+    "antd": "3.15.2",
     "apollo-cache-inmemory": "1.5.1",
     "apollo-client": "2.5.1",
     "apollo-link-http": "1.5.14",
