--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "@mxcins/lodash": "1.0.1",
+    "@mxcins/pluralize": "^0.1.1",
     "@mxcins/request": "1.3.1",
     "@mxcins/utils": "1.0.1",
     "antd": "3.15.2",
@@ -58,7 +59,7 @@
     "umi-plugin-react": "1.7.4"
   },
   "devDependencies": {
-    "@mxcins/types": "1.0.1",
+    "@mxcins/types": "1.0.2",
     "@types/graphql": "14.2.0",
     "@types/jest": "^24.0.11",
     "@types/react-highlight-words": "0.16.0",
