--- a/package.json
+++ b/package.json
@@ -44,12 +44,14 @@
     "@mxcins/pluralize": "^0.1.1",
     "@mxcins/request": "1.3.1",
     "@mxcins/utils": "1.0.1",
+    "@types/lodash-es": "^4.17.3",
     "antd": "3.15.2",
     "apollo-cache-inmemory": "1.5.1",
     "apollo-client": "2.5.1",
     "apollo-link-http": "1.5.14",
     "graphql": "14.2.1",
     "graphql-tag": "2.10.1",
+    "lodash-es": "^4.17.11",
     "moment-es6": "^1.0.0",
     "react": "16.8.3",
     "react-apollo": "2.5.4",
