--- a/package.json
+++ b/package.json
@@ -41,18 +41,18 @@
   },
   "dependencies": {
     "@mxcins/lodash": "1.0.1",
-    "@mxcins/pluralize": "^0.1.1",
+    "@mxcins/pluralize": "0.1.1",
     "@mxcins/request": "1.3.1",
     "@mxcins/utils": "1.0.1",
-    "@types/lodash-es": "^4.17.3",
+    "@types/lodash-es": "4.17.3",
     "antd": "3.15.2",
     "apollo-cache-inmemory": "1.5.1",
     "apollo-client": "2.5.1",
     "apollo-link-http": "1.5.14",
     "graphql": "14.2.1",
     "graphql-tag": "2.10.1",
-    "lodash-es": "^4.17.11",
-    "moment-es6": "^1.0.0",
+    "lodash-es": "4.17.11",
+    "moment": "2.24.0",
     "react": "16.8.3",
     "react-apollo": "2.5.4",
     "react-dom": "16.8.3",
@@ -63,7 +63,7 @@
   "devDependencies": {
     "@mxcins/types": "1.0.2",
     "@types/graphql": "14.2.0",
-    "@types/jest": "^24.0.11",
+    "@types/jest": "24.0.11",
     "@types/react-highlight-words": "0.16.0",
     "graphql-schema-typescript": "1.2.9",
     "husky": "1.3.1",
