--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@types/graphql": "14.2.0",
     "@types/jest": "24.0.11",
     "@types/react-highlight-words": "0.16.0",
+    "@types/react-intl": "^2.3.17",
     "graphql-schema-typescript": "1.2.9",
     "husky": "1.3.1",
     "lint-staged": "8.1.5",
