--- a/package.json
+++ b/package.json
@@ -42,29 +42,26 @@
   "dependencies": {
     "@mxcins/lodash": "1.0.1",
     "@mxcins/pluralize": "0.1.1",
-    "@mxcins/request": "1.3.1",
-    "@mxcins/utils": "1.0.1",
-    "@types/lodash-es": "4.17.3",
-    "antd": "3.15.2",
-    "apollo-cache-inmemory": "1.5.1",
-    "apollo-client": "2.5.1",
-    "apollo-link-http": "1.5.14",
-    "graphql": "14.2.1",
-    "graphql-tag": "2.10.1",
+    "@mxcins/request": "1.4.1",
+    "@mxcins/utils": "1.5.1",
+    "antd": "3.20.7",
+    "apollo-boost": "0.4.3",
+    "graphql": "14.4.2",
     "lodash-es": "4.17.11",
     "moment": "2.24.0",
     "react": "16.8.3",
     "react-apollo": "2.5.4",
-    "react-apollo-hooks": "^0.4.5",
+    "react-apollo-hooks": "0.5.0",
     "react-dom": "16.8.3",
     "react-highlight-words": "0.16.0",
-    "umi": "2.6.13",
-    "umi-plugin-react": "1.7.4"
+    "umi": "2.8.15",
+    "umi-plugin-react": "1.9.13"
   },
   "devDependencies": {
-    "@mxcins/types": "1.0.2",
+    "@mxcins/types": "1.3.1",
     "@types/graphql": "14.2.0",
     "@types/jest": "24.0.11",
+    "@types/lodash-es": "4.17.3",
     "@types/react-highlight-words": "0.16.0",
     "@types/react-intl": "^2.3.17",
     "graphql-schema-typescript": "1.2.9",
@@ -75,9 +72,10 @@
     "stylelint-config-mxcins": "1.0.0",
     "tslint": "5.16.0",
     "tslint-config-mxcins": "1.0.0",
-    "typescript": "3.4.3"
+    "typescript": "3.5.3",
+    "umi-types": "^0.3.15"
   },
   "resolutions": {
-    "@types/react": "16.8.8"
+    "@types/react": "16.8.14"
   }
 }
