--- a/package.json
+++ b/package.json
@@ -39,20 +39,20 @@
   },
   "dependencies": {
     "@mxcins/lodash": "1.0.0",
-    "react": "16.8.3",
-    "react-dom": "16.8.3",
-    "umi": "2.6.13",
-    "umi-plugin-react": "1.7.4"
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
+    "umi": "2.8.16",
+    "umi-plugin-react": "1.9.14"
   },
   "devDependencies": {
-    "@mxcins/types": "1.0.0",
+    "@mxcins/types": "1.3.1",
     "husky": "1.3.1",
     "lint-staged": "8.1.5",
     "prettier": "1.17.0",
     "stylelint": "9.x",
-    "stylelint-config-mxcins": "1.0.0-rc.2",
+    "stylelint-config-mxcins": "1.0.0",
     "tslint": "5.16.0",
-    "tslint-config-mxcins": "1.0.0-rc.1",
+    "tslint-config-mxcins": "1.0.0",
     "typescript": "3.4.3"
   },
   "resolutions": {
