--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
   },
   "devDependencies": {
     "@mxcins/types": "1.3.1",
+    "@types/debug": "^4.1.4",
+    "debug": "^4.1.1",
     "husky": "1.3.1",
     "lint-staged": "8.1.5",
     "prettier": "1.17.0",
