--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "@mxcins/lodash": "1.0.0",
+    "@mxcins/request": "1.4.3",
     "antd": "3.21.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
