--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
   },
   "dependencies": {
     "@mxcins/lodash": "1.0.0",
+    "@mxcins/pluralize": "0.1.1",
     "@mxcins/request": "1.4.3",
     "@mxcins/utils": "1.5.1",
     "antd": "3.21.2",
+    "lodash-es": "4.17.15",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "umi": "2.8.16",
@@ -51,6 +53,7 @@
   "devDependencies": {
     "@mxcins/types": "1.3.1",
     "@types/debug": "^4.1.4",
+    "@types/lodash-es": "^4.17.3",
     "debug": "^4.1.1",
     "husky": "1.3.1",
     "lint-staged": "8.1.5",
