--- a/package.json
+++ b/package.json
@@ -47,13 +47,15 @@
     "lodash-es": "4.17.15",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "umi": "2.8.16",
-    "umi-plugin-react": "1.9.14"
+    "socket.io-client": "2.2.0",
+    "umi": "2.8.18",
+    "umi-plugin-react": "1.9.17"
   },
   "devDependencies": {
     "@mxcins/types": "1.3.1",
     "@types/debug": "^4.1.4",
     "@types/lodash-es": "^4.17.3",
+    "@types/socket.io-client": "^1.4.32",
     "debug": "^4.1.1",
     "husky": "1.3.1",
     "lint-staged": "8.1.5",
