fixed bug socket.io build error && add deploy

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "author": "Xiaochuan Ma <mxcins@gmail.com>",
   "scripts": {
-    "deploy": "node ./scripts/deploy.js",
+    "deploy": "npx pm2 deploy production update",
     "start": "umi dev",
     "build": "umi build",
     "lint": "yarn lint:style && yarn lint:ts && yarn ts-compile-check",
