--- a/package.json
+++ b/package.json
@@ -12,18 +12,16 @@
   },
   "author": "Xiaochuan Ma <mxcins@gmail.com>",
   "scripts": {
-    "deploy": "npx pm2 deploy production update",
-    "start": "umi dev",
     "build": "umi build",
-    "lint": "yarn lint:style && yarn lint:ts && yarn ts-compile-check",
+    "deploy": "npx pm2 deploy production update",
+    "lint": "yarn lint:style && yarn lint:eslint && yarn ts-compile-check",
+    "lint:eslint": "eslint --fix 'src/**/*.{ts,tsx,js,jsx}'",
     "lint-staged": "lint-staged",
-    "lint-staged:js": "eslint --ext .js",
-    "lint-staged:ts": "tslint --fix \"src/**/*.ts*\"",
     "lint:style": "stylelint \"src/**/*.less\" --syntax less",
-    "lint:ts": "tslint --fix \"src/**/*.ts*\"",
-    "prettier": "prettier --write \"./src/**/*\" \"./typings/**/*\"",
+    "prettier": "prettier --write '**/*.{ts,tsx,js,jsx,md,json}' \"./typings/**/*\"",
+    "start": "umi dev",
     "test": "umi test",
-    "ts-compile-check": "tsc -p tsconfig.json --noEmit"
+    "ts-compile-check": "tsc --noEmit"
   },
   "husky": {
     "hooks": {
@@ -31,12 +29,16 @@
     }
   },
   "lint-staged": {
-    "**/*.less": "stylelint --syntax less",
-    "**/*.{js,jsx,ts,tsx,less}": [
+    "**/*.less": [
+      "stylelint --syntax less",
       "prettier --write",
       "git add"
     ],
-    "**/*.{ts,tsx}": "npm run lint-staged:ts"
+    "**/*.{js,jsx,ts,tsx}": [
+      "yarn lint:eslint",
+      "prettier --write",
+      "git add"
+    ]
   },
   "dependencies": {
     "@mxcins/lodash": "1.0.0",
@@ -52,6 +54,7 @@
     "umi-plugin-react": "1.9.17"
   },
   "devDependencies": {
+    "@mxcins/bedrock": "1.0.0-beta.3",
     "@mxcins/types": "1.3.1",
     "@types/debug": "^4.1.4",
     "@types/lodash-es": "^4.17.3",
