--- a/package.json
+++ b/package.json
@@ -45,7 +45,10 @@
     "@mxcins/pluralize": "0.1.1",
     "@mxcins/request": "1.4.3",
     "@mxcins/utils": "1.5.1",
+    "@types/jsonwebtoken": "^8.3.3",
     "antd": "3.21.2",
+    "js-cookie": "^2.2.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash-es": "4.17.15",
     "react": "16.8.6",
     "react-dom": "16.8.6",
@@ -57,6 +60,7 @@
     "@mxcins/bedrock": "1.0.0-beta.3",
     "@mxcins/types": "1.3.1",
     "@types/debug": "^4.1.4",
+    "@types/js-cookie": "^2.2.2",
     "@types/lodash-es": "^4.17.3",
     "@types/socket.io-client": "^1.4.32",
     "debug": "^4.1.1",
