--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prettier": "prettier --write '**/*.{ts,tsx,js,jsx,md,json}' \"./typings/**/*\"",
     "start": "umi dev",
     "test": "umi test",
+    "schema": "graphql get-schema default && graphql-schema-typescript generate-ts src/graphql/schema.graphql --output=src/graphql/generated.d.ts",
     "ts-compile-check": "tsc --noEmit"
   },
   "husky": {
@@ -53,8 +54,8 @@
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "socket.io-client": "2.2.0",
-    "umi": "2.8.18",
-    "umi-plugin-react": "1.9.17"
+    "umi": "2.8.20",
+    "umi-plugin-react": "1.9.19"
   },
   "devDependencies": {
     "@mxcins/bedrock": "1.0.0-beta.3",
@@ -64,6 +65,9 @@
     "@types/lodash-es": "^4.17.3",
     "@types/socket.io-client": "^1.4.32",
     "debug": "^4.1.1",
+    "dotenv": "^8.1.0",
+    "graphql-cli": "^3.0.14",
+    "graphql-schema-typescript": "^1.2.9",
     "husky": "1.3.1",
     "lint-staged": "8.1.5",
     "prettier": "1.17.0",
