--- a/package.json
+++ b/package.json
@@ -44,14 +44,18 @@
   "dependencies": {
     "@mxcins/lodash": "1.0.0",
     "@mxcins/pluralize": "0.1.1",
-    "@mxcins/request": "1.4.3",
+    "@mxcins/request": "2.0.0-alpha.4",
     "@mxcins/utils": "1.5.1",
     "@types/jsonwebtoken": "^8.3.3",
+    "@types/react-custom-scrollbars": "^4.0.6",
     "antd": "3.21.2",
+    "graphql": "^14.5.3",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "lodash-es": "4.17.15",
+    "moment": "^2.24.0",
     "react": "16.8.6",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "16.8.6",
     "socket.io-client": "2.2.0",
     "umi": "2.8.20",
