--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "cov": "egg-bin cov",
     "debug": "egg-bin debug",
     "dev": "egg-bin dev",
-    "lint": "eslint .",
+    "lint": "eslint . --fix && yarn ts-compile-check",
     "prettier": "prettier --write \"{,!(node_modules|build)/**/}*.{js,ts,jsx,tsx,less,md}\"",
     "start": "yarn build && egg-scripts start --daemon --title=egg-server-frontend  --sticky",
     "stop": "egg-scripts stop --title=egg-server-frontend",
     "test": "npm run lint -- --fix && npm run test-local",
-    "test-local": "egg-bin test"
+    "test-local": "egg-bin test",
+    "ts-compile-check": "tsc -p tsconfig.json --noEmit"
   },
   "resolutions": {
     "@types/react": "16.9.8",
@@ -45,6 +46,7 @@
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "socket.io-client": "^2.3.0",
+    "typescript": "3.6.2",
     "umi": "^2.12.9",
     "umi-plugin-react": "^1.14.12",
     "umi-server": "^1.2.1"
