--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2"
   },
-    "husky": {
+  "husky": {
     "hooks": {
       "pre-commit": "yarn ts-compile-check && lint-staged"
     }
@@ -54,13 +54,20 @@
     ]
   },
   "dependencies": {
+    "@mxcins/extensions": "^1.0.1",
+    "@mxcins/request": "2.1.0-alpha.0",
     "antd": "3.25.2",
     "egg": "^2.15.1",
+    "egg-proxy": "^1.1.0",
     "egg-scripts": "^2.11.0",
     "egg-socket.io": "^4.1.6",
     "egg-view-assets": "^1.6.0",
     "husky": "4.0.0",
+    "js-cookie": "^2.2.1",
+    "jsonwebtoken": "^8.5.1",
     "lint-staged": "9.5.0",
+    "mobx": "^5.15.1",
+    "mobx-react": "^6.1.4",
     "react": "16.10.2",
     "react-dom": "16.10.2",
     "react-router": "5.1.2",
@@ -68,11 +75,15 @@
     "socket.io-client": "^2.3.0",
     "typescript": "3.6.2",
     "umi": "^2.12.9",
+    "umi-plugin-locale": "^2.11.4",
     "umi-plugin-react": "^1.14.12",
     "umi-server": "^1.2.1"
   },
   "devDependencies": {
     "@mxcins/bedrock": "^1.0.0-beta.4",
+    "@mxcins/types": "^1.5.0",
+    "@types/js-cookie": "^2.2.4",
+    "@types/jsonwebtoken": "^8.3.5",
     "@types/react": "16.9.8",
     "@types/react-dom": "16.9.4",
     "@types/react-router": "5.1.2",
